# ai-agent-sample

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  main.py
app/llm/: base.py  factory.py  mock.py  openai_client.py  sample_responses.py
app/models/: note.py
app/parsers/: note_response_parser.py
app/prompts/: note_prompt.py
app/services/: note_organizer.py
app/ui/: streamlit_app.py  streamlit_view_model.py
tests/: test_cli.py  test_llm_client.py  test_llm_factory.py  test_main.py  test_note_organizer.py  test_note_prompt.py  test_note_response_parser.py  test_openai_client.py  test_streamlit_view_model.py
